<resources>
    <string name="app_name">Judo feuille de combats</string>
    <string name="nouvelle_feuille">Nouvelle feuille</string>
    <string name="charger_une_feuille">Charger une feuille</string>
    <string name="d_marrer_le_combat">Démarrer le prochain combat</string>
    <string name="noms">Noms</string>
    <string name="clubs">Clubs</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="total_victoires">Total Victoires</string>
    <string name="total_points">Total Points</string>
    <string name="place">Place</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ippon">Ippon</string>
    <string name="waza">Waza</string>
    <string name="shido">Shido</string>
    <string name="fin_du_combat">Fin du combat</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="se_pr_pare">(Prochain combat) Se prépare :</string>
    <string name="contre">Contre</string>
    <string name="refresh">Refresh</string>
    <string name="impossible_de_d_partager_les_deux_combattants">Impossible de départager les deux combattants.</string>
    <string name="combattant_blanc_gagne">Combattant Blanc gagne</string>
    <string name="rajouter_du_temps">Rajouter du temps</string>
    <string name="combattant_rouge_gagne">Combattant Rouge gagne</string>
</resources>